--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ A:hover{color:red}
 <tr>
 
 <td width="5%">
-<img src="./images/Sivaram.jpg" width="200">
+<img src="./images/krithika.jpg" width="200">
 </td>
 
 <td width="20%">
