--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ kn295 (at) cornell (dot) edu
 
 <h2>Research</h2>
 I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations as well.
+
+<img src="./images/wordle.png" width="400">
 </td>
 
 </tr>
