index.html updated

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ A:hover{color:red}
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Postdoctoral Associate<br>
-<a href="http://math.nyu.edu/">Sibley school of Mechanical and Aerospace Engineering</a><br>
-<a href="http://www.nyu.edu/">Cornell University</a><br>
+<a href="http://www.mae.cornell.edu/">Sibley school of Mechanical and Aerospace Engineering</a><br>
+<a href="http://www.cornell.edu/">Cornell University</a><br>
 Rhodes Hall, Room 633,<br>
 Ithaca, NY-14853<br>
 kn295 (at) cornell (dot) edu
