index.html updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <tr>
 <td>
 <h2> Mechanisms </h2>
-All mechanism are made available in the hope that they will be useful and have been validated as discussed in the journal articles.
+All mechanism are made available and have been validated as discussed in the journal articles.
 </td>
 </tr>
 </body></html>
