--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -63,4 +62,17 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 All mechanism are made available and have been validated as discussed in the journal articles.
 </td>
 </tr>
+
+
+
+<tr>
+<td>
+<h2> Alma mater</h2>
+<a href="http://www.sknspmcvv.org">VIVEKANANDA VIDYALAYA</a></br>
+<a href="http://www.davgirlsgopalapuram.com">DAV</a></br>
+<a href="http://www.iitm.ac.in">IIT MADRAS</a></br>
+<a href="http://www.stanford.edu">STANFORD</a></br>
+</td>
+</tr>
+
 </body></html>
