--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. 
 	<ul style="list-style-type:square"> <li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
 <li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
-<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism in Chemkin format</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism in Chemkin format</a></li>
-<li><a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism in FlameMaster format</a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism in FlameMaster format</a></li>
+<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism</a></li>
+<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism file</a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism</a></li>
 <li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
 <li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
