Added didecane link

--- a/index.html
+++ b/index.html
@@ -48,6 +48,30 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", in review.</li><br>
 
+<!DOCTYPE html>
+<html>
+<head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#hide").click(function(){
+    $("p").hide();
+  });
+  $("#show").click(function(){
+    $("p").show();
+  });
+});
+</script>
+</head>
+<body>
+
+<p>If you click on the "Hide" button, I will disappear.</p>
+<button id="hide">Show less</button>
+<button id="show">Show more</button>
+
+</body>
+</html>
+
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. 
 	<ul style="list-style-type:square"> <li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
 <li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
