--- a/dodecane.html
+++ b/dodecane.html
@@ -83,7 +83,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
 <li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
-<li><a href="krithikasivaram.github.io/dodecane.html">Source files</a></li>
+<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Source files</a></li>
 </ul>
 </div>
 
