--- a/index.html
+++ b/index.html
@@ -71,14 +71,32 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <h4>Click each item for more details</h4>
 <ul>
 
-<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", in review.</li><br>
+<div id="flip">
+<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", accepted to Combustion and Flame.</li><br>
+</div>
+<div id="panel"> 
+	<ul style="list-style-type:square"> <li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
+<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
+<!-- <li><a href="./dodecane.html">Source files</a></li> -->
+<li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
+<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism</a></li>
+<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism</a></li>
+<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
+<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
+</ul>
+</div>
 
 <div id="flip">
 	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. </div>
 <div id="panel"> 
 	<ul style="list-style-type:square"> <li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
-<li><a href="./dodecane.html">Source files</a></li>
+<!-- <li><a href="./dodecane.html">Source files</a></li> -->
+<li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
+<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism</a></li>
+<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism</a></li>
+<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
+<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
 </ul>
 </div>
 
@@ -93,13 +111,13 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 </td>
 </tr>
 
-<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<!-- <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
 <h2> Mechanisms </h2>
 All mechanism are made available and have been validated as discussed in the journal articles.
 </td>
-</tr>
+</tr> -->
 
 
 
