--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <h4>Click each item for more details</h4>
 <ul>
 
-<!--<div id="flip">
+<div id="flip">
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", accepted to Combustion and Flame.</div>
 <div id="panel">
 <ul style="list-style-type:square">
@@ -84,7 +84,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
 </ul>
 </div>
-<br> -->
+<br>
 
 <div id="flip">
 	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. </div>
