--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@ A:hover{color:red}
 
 <script> 
 $(document).ready(function(){
-  $("#flip").click(function(){
-    $("#panel").slideToggle("slow");
+  $("#flip1").click(function(){
+    $("#panel1").slideToggle("slow");
+  });
+});
+</script>
+
+
+<script> 
+$(document).ready(function(){
+  $("#flip2").click(function(){
+    $("#panel2").slideToggle("slow");
+  });
+});
+</script>
+
+<script> 
+$(document).ready(function(){
+  $("#flip3").click(function(){
+    $("#panel3").slideToggle("slow");
   });
 });
 </script>
@@ -69,26 +86,27 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <td>
 <h2>Journal publications</h2>
 <h4>Click each item for more details</h4>
-<ul>
 
-<div id="flip">
+<ul>
+	
+<div id="flip1">
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", accepted to Combustion and Flame.</div>
-<div id="panel">
-<ul style="list-style-type:square">
-<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
-<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
-<li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
-<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism</a></li>
-<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism</a></li>
-<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
-<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
-</ul>
+<div id="panel1">
+	<ul style="list-style-type:square">
+		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0">Preprint*</a></li>
+		<!-- <li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li> -->
+		<li><a href="https://www.dropbox.com/s/n7305u9tw57b17t/Supporting_Materials.pdf?dl=0">Supplementary document</a></li>
+		<li>Chemkin format: <a href="https://www.dropbox.com/s/buzt4k0bkc1vgen/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/fqsaj7rb0yl8xg0/mechanismChemkin_highT.txt?dl=0">High temperature mechanism</a></li>
+		<li>FlameMaster format: <a href="https://www.dropbox.com/s/y8a8o1j763bcrqf/reNumber.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/rgc0lhsejbfxzf4/reNumber_highT.txt?dl=0">High temperature mechanism</a></li>
+		<li><a href="https://www.dropbox.com/s/uaj2d4zioi1tmr2/thermo_FULL.txt?dl=0">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/mp9a2lebrj1bcsb/trans_FULL.txt?dl=0">Transport data</a></li>
+	</ul>
 </div>
 <br>
 
-<div id="flip">
+<div id="flip2">
 	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. </div>
-<div id="panel"> 
+<div id="panel2"> 
 	<ul style="list-style-type:square"> 
 		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
 		<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
@@ -101,12 +119,23 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 	</ul>
 </div>
 <br>
-<!--<button id="hide">Show less</button>
-<button id="show">Show more</button>
--->
-<!-- <br> -->
 
-<li> K Narayanaswamy, G Blanquart, H Pitsch, "A consistent chemical mechanism for oxidation of substituted aromatic species", Combustion and Flame, 2010</li><br>
+<div id="flip3">
+<li> K. Narayanaswamy, G. Blanquart, H. Pitsch, "A consistent chemical mechanism for oxidation of substituted aromatic species", Combustion and Flame, 2010</li>
+<div id="panel3"> 
+	<ul style="list-style-type:square"> 
+		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
+		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218010001975">Journal version</a></li>
+		<li><a href="https://www.dropbox.com/s/q7h6fzcbqg6uzqp/Supporting_Materials.pdf?dl=0">Supplementary document</a></li>
+		<li>Mechanism: 
+			<a href="https://www.dropbox.com/s/tkazdrwwnsf3s2k/Mechanism.chmech?dl=0">Chemkin format</a>/<a href="https://www.dropbox.com/s/11n3k4iqby3wgfd/Mechanism.mech?dl=0">FlameMaster format</a>
+		</li>
+		<li><a href="https://www.dropbox.com/s/wjmgjyexwzhucoy/thermo.dat?dl=0">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/x00ott1mkeno006/trans.dat?dl=0">Transport data</a></li>
+	</ul>
+</div>
+<br>
+</ul>
 
 </td>
 </tr>
@@ -118,8 +147,6 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 All mechanism are made available and have been validated as discussed in the journal articles.
 </td>
 </tr> -->
-
-
 
 <tr>
 <td>
