--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
 </style>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
-<script> 
+<script>
 $(document).ready(function(){
   $("#flip1").click(function(){
     $("#panel1").slideToggle("slow");
@@ -23,7 +23,7 @@ $(document).ready(function(){
 </script>
 
 
-<script> 
+<script>
 $(document).ready(function(){
   $("#flip2").click(function(){
     $("#panel2").slideToggle("slow");
@@ -31,13 +31,13 @@ $(document).ready(function(){
 });
 </script>
 
-<script> 
+<script>
 $(document).ready(function(){
   $("#flip3").click(function(){
     $("#panel3").slideToggle("slow");
   });
 });
-</script>
+</script> -->
 
 <style> 
 #panel,#flip
