--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
 </style>
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <script>
 $(document).ready(function(){
@@ -37,7 +37,7 @@ $(document).ready(function(){
     $("#panel3").slideToggle("slow");
   });
 });
-</script> -->
+</script>
 
 <style> 
 #panel,#flip
@@ -85,7 +85,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <tr>
 <td>
 <h2>Journal publications</h2>
-<h4>Click each item for more details</h4>
+<!-- <h4>Click each item for more details</h4> -->
 
 <ul>
 	
