Add link to MCH paper

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ display:none;
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 
-<td width="40%">
-<img src="./images/krithika.jpg" width="700">
+<td width="50%">
+<img src="./images/krithika.jpg" width="900">
 </td>
 
 <td width="50%">
@@ -72,10 +72,12 @@ Postdoctoral Associate<br>
 <a href="http://www.cornell.edu/">Cornell University</a><br>
 Rhodes Hall, Room 633,<br>
 Ithaca, NY-14853<br>
-kn295 (at) cornell (dot) edu
-
+kn295 (at) cornell (dot) edu<br>
+<a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br>
+	
 <h2>Research</h2>
-I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations as well.
+I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations as well. <br>
+<a href="./Documents/Research_Experience.pdf">Research Experience </a>
 
 <img src="./images/wordle.png" width="800">
 </td>
@@ -88,13 +90,19 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
+
+<div id="flip1">
+<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "", in preparation.</div>
+<div id="panel1">
+</div>
+<br>
 	
 <div id="flip1">
-<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", accepted to Combustion and Flame.</div>
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", in press, Combustion and Flame, 2014.</div>
 <div id="panel1">
 	<ul style="list-style-type:square">
 		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0">Preprint*</a></li>
-		<!-- <li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li> -->
+		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218014003344">Journal version</a></li>
 		<li><a href="https://www.dropbox.com/s/n7305u9tw57b17t/Supporting_Materials.pdf?dl=0">Supplementary document</a></li>
 		<li>Chemkin format: <a href="https://www.dropbox.com/s/buzt4k0bkc1vgen/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/fqsaj7rb0yl8xg0/mechanismChemkin_highT.txt?dl=0">High temperature mechanism</a></li>
 		<li>FlameMaster format: <a href="https://www.dropbox.com/s/y8a8o1j763bcrqf/reNumber.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/rgc0lhsejbfxzf4/reNumber_highT.txt?dl=0">High temperature mechanism</a></li>
