--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 
 <ul>
 
-<div id="flip1">
+<!-- ><div id="flip1">
 <li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "", in preparation.</div>
 <div id="panel1">
 </div>
-<br>
+<br>-->
 	
 <div id="flip1">
 <li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", in press, Combustion and Flame, 2014.</div>
