--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ kn295 (at) cornell (dot) edu<br>
 <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br>
 	
 <h2>Research</h2>
-I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations as well. <br>
+I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations. <br>
 <a href="./Documents/Research_Experience.pdf">Research Experience </a>
 
 <img src="./images/wordle.png" width="800">
