--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 
 <ul>
 <div id="flip1">
-<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", in press, Combustion and Flame, 2014.</div>
+<li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", Combustion and Flame, 162 (4), 2015.</div>
 <div id="panel1">
 	<ul style="list-style-type:square">
 		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0">Preprint*</a></li>
@@ -106,7 +106,7 @@ I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My
 <br>
 
 <div id="flip2">
-	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 2014. </div>
+	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 161 (4), 2014. </div>
 <div id="panel2"> 
 	<ul style="list-style-type:square"> 
 		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
@@ -159,4 +159,16 @@ All mechanism are made available and have been validated as discussed in the jou
 </td>
 </tr>
 
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62002830-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+  
 </body></html>
