--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Postdoctoral Associate<br>
 Rhodes Hall, Room 633,<br>
 Ithaca, NY-14853<br>
 kn295 (at) cornell (dot) edu<br>
-<a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br>
+<!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
 <h2>Research</h2>
 I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations. <br>
