--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ kn295 (at) cornell (dot) edu<br>
 <h2>Research</h2>
 I work with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a>. My research revolves around chemical kinetic mechanism development for surrogates of real fuels. I am currently exploring reactive flow simulations. <br>
 <a href="./Documents/Research_Experience.pdf">Research Experience </a>
+<a href="./Documents/krithika_publications.pdf">List of publications </a>
+<a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en">Scholar page </a>
 
 <img src="./images/wordle.png" width="800">
 </td>
