Adding useful tools

--- a/index.html
+++ b/index.html
@@ -154,10 +154,18 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 <h2> Alma mater</h2>
-<a href="http://www.sknspmcvv.org">VIVEKANANDA VIDYALAYA</a></br>
-<a href="http://www.davgirlsgopalapuram.com">DAV</a></br>
-<a href="http://www.iitm.ac.in">IIT MADRAS</a></br>
-<a href="http://www.stanford.edu">STANFORD</a></br>
+<a href="http://www.sknspmcvv.org">Vivekananda Vidyalaya, Perambur</a></br>
+<a href="http://www.davgirlsgopalapuram.com">DAV Girls, Gopalapuram</a></br>
+<a href="http://www.iitm.ac.in">Indian Institute of Technology Madras</a></br>
+<a href="http://www.stanford.edu">Stanford University</a></br>
+</td>
+</tr>
+
+<tr>
+<td>
+<h2> Useful web-based tools</h2>
+<a href="http://arohatgi.info/WebPlotDigitizer/">Web plot digitizer</a></br>
+<a href="http://www.tutorialspoint.com/codingground.htm">Coding ground</a></br>
 </td>
 </tr>
 
