Adding useful tools

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ All mechanism are made available and have been validated as discussed in the jou
 <h2> Useful web-based tools</h2>
 <a href="http://arohatgi.info/WebPlotDigitizer/">Web plot digitizer</a></br>
 <a href="http://www.tutorialspoint.com/codingground.htm">Coding ground</a></br>
+<a href="https://www.overleaf.com">WriteLaTeX</a></br>
+<a href="http://detexify.kirelabs.org/classify.html">Detexify</a></br>
 </td>
 </tr>
 
