--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ kn295 (at) cornell (dot) edu<br>
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
 <h2>Research</h2>
-I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.
+I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br>
 <a href="./Documents/Research_Experience.pdf">Research Experience</a> <br>
 <a href="./Documents/krithika_publications.pdf">List of publications</a> <br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en">Scholar page</a> <br>
