--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@ All mechanism are made available and have been validated as discussed in the jou
 </td>
 </tr> -->
 
-<h2> <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0">Component Library Framework</a></h2>
+<h2>Component Library framework</h2>
+ <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0">Mix-and-match mechanism generation tool</a></br>
+ <!-- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0">Mix-and-match mechanism generation tool</a></br> -->
 
 <tr>
 <td>
