--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrin
 
 </td>
 
-<td>
+<td width="50%">
 <img src="./images/wordle.png" width="800">	
 </td>
 
