--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ Postdoctoral Associate<br>
 <a href="http://www.cornell.edu/">Cornell University</a><br>
 Rhodes Hall, Room 633,<br>
 Ithaca, NY-14853<br>
-kn295 (at) cornell (dot) edu<br>
+krithika.n (at) alumni (dot) cornell (dot) edu<br>
+krit87 (at) stanford (dot) edu<br>
+krithu.n (at) gmail (dot) com<br>
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
 <h2>Research</h2>
