Adding research gate page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrin
 <a href="./Documents/Research_Experience.pdf">Research Experience</a> <br>
 <a href="./Documents/krithika_publications.pdf">List of publications</a> <br>
 <a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en">Scholar page</a> <br>
-
+<a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy">Researchgate page</a> <br>
 </td>
 
 <td width="50%">
