Test opening in a new page

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 <h2>Component Library framework</h2>
- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0">Mix-and-match mechanism generation tool</a></br>
+ <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0"> target="_blank">Mix-and-match mechanism generation tool</a></br>
  <!-- <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0">Mix-and-match mechanism generation tool</a></br> -->
 </td>
 </tr>
