Links open in new page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ display:none;
 <td width="50%">
 <h2>Krithika Narayanaswamy</h2>
 Postdoctoral Associate<br>
-<a href="http://www.mae.cornell.edu/">Sibley school of Mechanical and Aerospace Engineering</a><br>
-<a href="http://www.cornell.edu/">Cornell University</a><br>
+<a href="http://www.mae.cornell.edu/" target="_blank">Sibley school of Mechanical and Aerospace Engineering</a><br>
+<a href="http://www.cornell.edu/" target="_blank">Cornell University</a><br>
 Rhodes Hall, Room 633,<br>
 Ithaca, NY-14853<br>
 krithika.n (at) alumni (dot) stanford (dot) edu<br>
@@ -74,12 +74,12 @@ krithu.n (at) gmail (dot) com<br>
 <!-- <a href="./Documents/Krithika_Resume.pdf">Resume'</a> <br> -->
 	
 <h2>Research</h2>
-I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br>
+I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_blank">Prof. Perrine Pepiot</a> on simulating reactive flows. My doctoral research, advised by  <a href="http://www.itv.rwth-aachen.de/en/institute/staff-contact/prof-heinz-pitsch-en/" target="_blank">Prof. Heinz Pitsch</a>, focused on chemical kinetic mechanism development for surrogates of real fuels.<br>
 <br>
-<a href="./Documents/Research_Experience.pdf">Research Experience</a> <br>
-<a href="./Documents/krithika_publications.pdf">List of publications</a> <br>
-<a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en">Scholar page</a> <br>
-<a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy">ResearchGate page</a> <br>
+<a href="./Documents/Research_Experience.pdf" target="_blank">Research Experience</a> <br>
+<a href="./Documents/krithika_publications.pdf" target="_blank">List of publications</a> <br>
+<a href="https://scholar.google.com/citations?user=EfVTkm8AAAAJ&hl=en" target="_blank">Scholar page</a> <br>
+<a href="https://www.researchgate.net/profile/Krithika_Narayanaswamy" target="_blank">ResearchGate page</a> <br>
 </td>
 
 <td width="50%">
@@ -98,13 +98,13 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrin
 <li> K. Narayanaswamy, H. Pitsch, P. Pepiot "A chemical mechanism for low to high temperature oxidation of methylcyclohexane as a component of transportation fuel surrogates", Combustion and Flame, 162 (4), 2015.</div>
 <div id="panel1">
 	<ul style="list-style-type:square">
-		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0">Preprint*</a></li>
-		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218014003344">Journal version</a></li>
-		<li><a href="https://www.dropbox.com/s/n7305u9tw57b17t/Supporting_Materials.pdf?dl=0">Supplementary document</a></li>
-		<li>Chemkin format: <a href="https://www.dropbox.com/s/buzt4k0bkc1vgen/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/fqsaj7rb0yl8xg0/mechanismChemkin_highT.txt?dl=0">High temperature mechanism</a></li>
-		<li>FlameMaster format: <a href="https://www.dropbox.com/s/y8a8o1j763bcrqf/reNumber.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/rgc0lhsejbfxzf4/reNumber_highT.txt?dl=0">High temperature mechanism</a></li>
-		<li><a href="https://www.dropbox.com/s/uaj2d4zioi1tmr2/thermo_FULL.txt?dl=0">Thermodynamic data</a></li>
-		<li><a href="https://www.dropbox.com/s/mp9a2lebrj1bcsb/trans_FULL.txt?dl=0">Transport data</a></li>
+		<li><a href="https://www.dropbox.com/s/c8i94z4o6jbl9sk/Methylcyclohexane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
+		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218014003344" target="_blank">Journal version</a></li>
+		<li><a href="https://www.dropbox.com/s/n7305u9tw57b17t/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
+		<li>Chemkin format: <a href="https://www.dropbox.com/s/buzt4k0bkc1vgen/mechanismChemkin.txt?dl=0" target="_blank">Complete mechanism</a>/<a href="https://www.dropbox.com/s/fqsaj7rb0yl8xg0/mechanismChemkin_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+		<li>FlameMaster format: <a href="https://www.dropbox.com/s/y8a8o1j763bcrqf/reNumber.txt?dl=0" target="_blank">Complete mechanism </a>/<a href="https://www.dropbox.com/s/rgc0lhsejbfxzf4/reNumber_highT.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+		<li><a href="https://www.dropbox.com/s/uaj2d4zioi1tmr2/thermo_FULL.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/mp9a2lebrj1bcsb/trans_FULL.txt?dl=0" target="_blank">Transport data</a></li>
 	</ul>
 </div>
 <br>
@@ -113,14 +113,14 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrin
 	<li> K. Narayanaswamy, P. Pepiot, H. Pitsch, "A chemical mechanism for low to high temperature oxidation of n-dodecane as a component of transportation fuel surrogates", Combustion and Flame, 161 (4), 2014. </div>
 <div id="panel2"> 
 	<ul style="list-style-type:square"> 
-		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
-		<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866">Journal version</a></li>
+		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
+		<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218013003866" target="_blank">Journal version</a></li>
 		<!-- <li><a href="./dodecane.html">Source files</a></li> -->
-		<li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0">Supplementary document</a></li>
-		<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0">High temperature mechanism</a></li>
-		<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0">Complete mechanism </a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0">High temperature mechanism</a></li>
-		<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0">Thermodynamic data</a></li>
-		<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0">Transport data</a></li>
+		<li><a href="https://www.dropbox.com/s/zxm8mseioqnpat1/Dodecane_Supplementary_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
+		<li>Chemkin format: <a href="https://www.dropbox.com/s/avmt9ln2yy5msl9/mechanismChemkin.txt?dl=0" target="_blank">Complete mechanism</a>/<a href="https://www.dropbox.com/s/cdlz0v50bcnel3z/highTMechChemkin.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+		<li>FlameMaster format: <a href="https://www.dropbox.com/s/2bwy74wmnf378ys/mechanismFlameMaster.txt?dl=0" target="_blank">Complete mechanism </a>/<a href="https://www.dropbox.com/s/ujrw9aqq1ojpzgg/highTMechFlameMaster.txt?dl=0" target="_blank">High temperature mechanism</a></li>
+		<li><a href="https://www.dropbox.com/s/gdexlpqq7um31o4/thermo.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/ttnrd2qj1e7rw6y/trans.txt?dl=0" target="_blank">Transport data</a></li>
 	</ul>
 </div>
 <br>
@@ -129,14 +129,14 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu">Prof. Perrin
 <li> K. Narayanaswamy, G. Blanquart, H. Pitsch, "A consistent chemical mechanism for oxidation of substituted aromatic species", Combustion and Flame, 2010</li>
 <div id="panel3"> 
 	<ul style="list-style-type:square"> 
-		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0">Preprint*</a></li>
-		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218010001975">Journal version</a></li>
-		<li><a href="https://www.dropbox.com/s/q7h6fzcbqg6uzqp/Supporting_Materials.pdf?dl=0">Supplementary document</a></li>
+		<li><a href="https://www.dropbox.com/s/otzzsa8gvsm8gue/Dodecane_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
+		<li><a href="http://www.sciencedirect.com/science/article/pii/S0010218010001975" target="_blank">Journal version</a></li>
+		<li><a href="https://www.dropbox.com/s/q7h6fzcbqg6uzqp/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
 		<li>Mechanism: 
-			<a href="https://www.dropbox.com/s/tkazdrwwnsf3s2k/Mechanism.chmech?dl=0">Chemkin format</a>/<a href="https://www.dropbox.com/s/11n3k4iqby3wgfd/Mechanism.mech?dl=0">FlameMaster format</a>
+			<a href="https://www.dropbox.com/s/tkazdrwwnsf3s2k/Mechanism.chmech?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/11n3k4iqby3wgfd/Mechanism.mech?dl=0">FlameMaster format</a>
 		</li>
-		<li><a href="https://www.dropbox.com/s/wjmgjyexwzhucoy/thermo.dat?dl=0">Thermodynamic data</a></li>
-		<li><a href="https://www.dropbox.com/s/x00ott1mkeno006/trans.dat?dl=0">Transport data</a></li>
+		<li><a href="https://www.dropbox.com/s/wjmgjyexwzhucoy/thermo.dat?dl=0" target="_blank">Thermodynamic data</a></li>
+		<li><a href="https://www.dropbox.com/s/x00ott1mkeno006/trans.dat?dl=0" target="_blank">Transport data</a></li>
 	</ul>
 </div>
 <br>
@@ -164,10 +164,10 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 <h2> Alma mater</h2>
-<a href="http://www.sknspmcvv.org">Vivekananda Vidyalaya, Perambur</a></br>
-<a href="http://www.davgirlsgopalapuram.com">DAV Girls, Gopalapuram</a></br>
-<a href="http://www.iitm.ac.in">Indian Institute of Technology Madras</a></br>
-<a href="http://www.stanford.edu">Stanford University</a></br>
+<a href="http://www.sknspmcvv.org" target="_blank">Vivekananda Vidyalaya, Perambur</a></br>
+<a href="http://www.davgirlsgopalapuram.com" target="_blank">DAV Girls, Gopalapuram</a></br>
+<a href="http://www.iitm.ac.in" target="_blank">Indian Institute of Technology Madras</a></br>
+<a href="http://www.stanford.edu" target="_blank">Stanford University</a></br>
 </td>
 </tr>
 
@@ -175,10 +175,10 @@ All mechanism are made available and have been validated as discussed in the jou
 <tr>
 <td>
 <h2> Useful web-based tools</h2>
-<a href="http://arohatgi.info/WebPlotDigitizer/">Web plot digitizer</a></br>
-<a href="http://www.tutorialspoint.com/codingground.htm">Coding ground</a></br>
-<a href="https://www.overleaf.com">WriteLaTeX</a></br>
-<a href="http://detexify.kirelabs.org/classify.html">Detexify</a></br>
+<a href="http://arohatgi.info/WebPlotDigitizer/" target="_blank">Web plot digitizer</a></br>
+<a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a></br>
+<a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
+<a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
 </td>
 </tr>
 
