--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ display:none;
 }
 </style>
 
+<script type="text/javascript">
+var image1 = new Image()
+image1.src = "images/wordle.jpg"
+var image2 = new Image()
+image2.src = "images/img4.jpg"
+</script>
+
 </head>
 
 <body bgcolor = "black">
@@ -85,6 +92,33 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <td width="50%">
 <img src="./images/wordle.png" width="600">	
 </td>
+
+<!-- Add sliding image 
+<head>
+<script type="text/javascript">
+var image1 = new Image()
+image1.src = "images/wordle.jpg"
+var image2 = new Image()
+image2.src = "images/img4.jpg"
+</script>
+</head> 
+<body> -->
+<p><img src="images/wordle.jpg" width="500" height="300" name="slide" /></p>
+<script type="text/javascript">
+        var step=1;
+        function slideit()
+        {
+            document.images.slide.src = eval("image"+step+".src");
+            if(step<2)
+                step++;
+            else
+                step=1;
+            setTimeout("slideit()",2500);
+        }
+        slideit();
+</script>
+<!-- </body> -->
+
 
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
