--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ image2.src = "images/img4.jpg"
 </script>
 </head> 
 <body> -->
-<p><img src="images/wordle.jpg" width="500" height="300" name="slide" /></p>
+<img src="images/wordle.jpg" width="600">
 <script type="text/javascript">
         var step=1;
         function slideit()
