Image slide show

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@ image2.src = "images/img4.jpg"
 </script>
 </head> 
 <body> -->
-<img src="images/wordle.jpg" width="600">
+<br>
+<td width="50%">
+	<img src="images/wordle.jpg" width="600">
+</td>
 <script type="text/javascript">
         var step=1;
         function slideit()
