--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@ A:hover{color:red}
 A:hover{color:red}
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery.orbit.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="css/orbit.css">
+
+<div id="featured"> 
+     <img src="images/wordle.jpg" alt="Overflow: Hidden No More" />
+     <img src="images/img4.jpg"  alt="HTML Captions" />
+     <img src="images/wordle.jpg" alt="Overflow: Hidden No More" />
+</div>
 
 <script>
 $(document).ready(function(){
@@ -102,7 +111,7 @@ var image2 = new Image()
 image2.src = "images/img4.jpg"
 </script>
 </head> 
-<body> -->
+<body> 
 <br>
 <td width="50%">
 	<img src="images/wordle.jpg" width="600">
@@ -120,8 +129,13 @@ image2.src = "images/img4.jpg"
         }
         slideit();
 </script>
-<!-- </body> -->
+</body> -->
 
+<script type="text/javascript">
+     $(window).load(function() {
+         $('#featured').orbit();
+     });
+</script>
 
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
