--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@ A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
 </style>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/jquery.orbit.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="css/orbit.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<style>
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+width: 70%;
+margin: auto;
+}
+</style>
+
 
 <script>
 $(document).ready(function(){
@@ -96,46 +106,66 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <img src="./images/wordle.png" width="600">	
 </td>
 
-<!-- Add sliding image 
-<head>
-<script type="text/javascript">
-var image1 = new Image()
-image1.src = "images/wordle.jpg"
-var image2 = new Image()
-image2.src = "images/img4.jpg"
-</script>
-</head> 
-<body> 
-<br>
-<td width="50%">
-	<img src="images/wordle.jpg" width="600">
-</td>
-<script type="text/javascript">
-        var step=1;
-        function slideit()
-        {
-            document.images.slide.src = eval("image"+step+".src");
-            if(step<2)
-                step++;
-            else
-                step=1;
-            setTimeout("slideit()",2500);
-        }
-        slideit();
-</script>
-</body> -->
+<!-- Add sliding image -->
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
 
-<div id="featured"> 
-     <img src="images/wordle.jpg" alt="Overflow: Hidden No More" />
-     <img src="images/img4.jpg"  alt="HTML Captions" />
-     <img src="images/wordle.jpg" alt="Overflow: Hidden No More" />
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="images/wordle.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Chania</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/img3.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Chania</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
+      </div>
+    
+      <div class="item">
+        <img src="images/img2.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="images/img1.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+  
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
-<br>
-<script type="text/javascript">
-     $(window).load(function() {
-         $('#featured').orbit();
-     });
-</script>
 
 </tr>
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
