--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@ A:hover{color:red}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!--><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<style>
+/*<style>
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
 width: 70%;
 margin: auto;
 }
-</style>
+</style>*/
 
 
 <script>
@@ -141,7 +141,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
         <img src="images/img2.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <p>Beautiful flowers in Kolymbari, Crete.</p>
         </div>
       </div>
 
@@ -149,7 +149,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
         <img src="images/img1.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <p>Beautiful flowers in Kolymbari, Crete.</p>
         </div>
       </div>
   
