Image slide show

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 
 <title>Krithika</title>
 <head>
+<style type="text/css">
+body{color:white}
+body{font-family:"Palatino"}
+body{font-size: 1.1em;}
+A:link{color:yellow}
+A:visited{color:yellow}
+A:hover{color:red}
+A:hover{color:red}
+</style>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -16,17 +25,7 @@
 width: 70%;
 margin: auto;
 }
-</style>*/
-
-<style type="text/css">
-body{color:white}
-body{font-family:"Palatino"}
-body{font-size: 1.1em;}
-A:link{color:yellow}
-A:visited{color:yellow}
-A:hover{color:red}
-A:hover{color:red}
-</style>
+</style>*/ -->
 
 <script>
 $(document).ready(function(){
